Fix overlapping hospital list with hospital selected

--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -55,6 +55,7 @@
   }
 }
 section#hospital-list{
+  clear: left;
   margin-top: 1em;
   .mobile {
     display: block;
